fix bug z-index

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -38,26 +38,6 @@ body {
   margin-right: -5px;
 }
 
-/* test */
-
-.grid__column-2{
-  padding-left: 5px;
-  padding-right: 5px;
-  width: 16.6667%;
-} 
-
-.grid__column-2-4{
-  padding-left: 5px;
-  padding-right: 5px;
-  width: 20%;
-}
-
-.grid__column-10{
-  padding-left: 5px;
-  padding-right: 5px;
-  width: 83.3333%;
-} 
-
 /* animation */
 @keyframes fadeIn{
   from{
